--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -113,6 +113,7 @@
       <option >Arizona</option>
       <option >Arkansas</option>
       <option >California</option>
+      <option >Cameroon</option>
       <option >Colorado</option>
       <option >Connecticut</option>
       <option >Delaware</option>
